added sendResetPasswordEmail and resetPassword  endpoints
